--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,4 +8,4 @@ html
             h1 Hello everyone!
             p This is my homepage.
             p Would you like to send me a message? Click here:
-            // lien formulaire
+            a.link_in(href="form", target="_blank") Form
