--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -3,9 +3,16 @@ doctype html
 html
     head
         title Home
+        
+        block styles
+            link(rel="stylesheet", type='text/css', href="home.css")
+
     body
         header
             h1 Hello everyone!
+        
+        main
             p This is my homepage.
-            p Would you like to send me a message? Click here:
+            p Would you like to send me a message?
+            p Then, click here:
             a.link_in(href="form", target="_blank") Form
